<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".startactivity.SignUpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:src="@drawable/exchange_logo"
            android:contentDescription="@string/signup_login_image_description" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:autofillHints="username"
            android:background="@drawable/edt_shape"
            android:drawableStart="@drawable/ic_account"
            android:hint="@string/signup_username_hint"
            android:inputType="text"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="#717171" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/edt_shape"
            android:drawableStart="@drawable/ic_email"
            android:hint="@string/signup_email_hint"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="#717171" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:autofillHints="phone"
            android:background="@drawable/edt_shape"
            android:drawableStart="@drawable/ic_phone"
            android:hint="@string/signup_edt_phone_hint"
            android:inputType="phone"
            android:maxLength="10"
            android:maxLines="1"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="#717171" />

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phone"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:autofillHints="postalAddress"
            android:background="@drawable/edt_shape"
            android:drawableStart="@drawable/ic_location"
            android:hint="@string/signup_address_hint"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="#717171"
            android:inputType="textPostalAddress" />


        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/address"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:autofillHints="password"
            android:background="@drawable/edt_shape"
            android:drawableStart="@drawable/ic_password"
            android:hint="@string/signup_edt_hint_choose_password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="#717171" />

        <EditText
            android:id="@+id/password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edt_shape"
            android:drawableStart="@drawable/ic_password"
            android:hint="@string/signup_edt_conform_password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="#717171"
            android:autofillHints="password" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password2"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_shape"
            android:padding="12dp"
            android:text="@string/signup_btn_text"
            android:textColor="@color/white" />
    </RelativeLayout>
</ScrollView>